Fix dropdown invalid icon overlapping issue

--- a/gui/src/public/css/formstyles.scss
+++ b/gui/src/public/css/formstyles.scss
@@ -31,6 +31,13 @@
   border-color: transparent;
     padding: 0;
   }
+
+  .formio-component-select {
+    .form-control.is-invalid.dropdown {
+      background-position: right calc(3.7em + 0.1875rem) center;
+    }
+  }
+
   .formio-component.has-feedback .invalid-feedback {
     display: block;
     color: inherit;
